RESOLVED FIXED266871
[WebGPU] unpack4x8unorm does not appear to be implemented
https://bugs.webkit.org/show_bug.cgi?id=266871
Summary [WebGPU] unpack4x8unorm does not appear to be implemented
Mike Wyrzykowski
Reported 2023-12-24 20:54:27 PST
[WebGPU] unpack4x8unorm does not appear to be implemented
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-24 20:54:49 PST
Ahmad Saleem
Comment 2 2023-12-25 06:28:51 PST
Duplicate of bug 266870?
Mike Wyrzykowski
Comment 3 2023-12-25 09:00:14 PST
*** Bug 266870 has been marked as a duplicate of this bug. ***
Tadeu Zagallo
Comment 4 2023-12-28 12:40:42 PST
EWS
Comment 5 2023-12-29 04:10:36 PST
Committed 272528@main (41341242c718): <https://commits.webkit.org/272528@main> Reviewed commits have been landed. Closing PR #22262 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.