[WebGPU] unpack4x8unorm does not appear to be implemented https://bugs.webkit.org/show_bug.cgi?id=266871 rdar://120107356

Reviewed by Mike Wyrzykowski.

Implement data packing[1] and unpacking[2] built-in functions.

[1]. https://www.w3.org/TR/WGSL/#pack-builtin-functions
[2]. https://www.w3.org/TR/WGSL/#unpack-builtin-functions

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::emitPack2x16Float):
(WGSL::Metal::emitUnpack2x16Float):
(WGSL::Metal::emitPack4xI8):
(WGSL::Metal::emitPack4xI8Clamp):
(WGSL::Metal::emitUnpack4xI8):
(WGSL::Metal::emitPack4xU8):
(WGSL::Metal::emitPack4xU8Clamp):
(WGSL::Metal::emitUnpack4xU8):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:
* Source/WebGPU/WGSL/tests/valid/pack-unpack.wgsl: Added.

Canonical link: https://commits.webkit.org/272528@main